--- a/multiplayserver/package.json
+++ b/multiplayserver/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "matchmakeserver",
+  "name": "multiplayserver",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2"
   }
 }
