--- a/multiplayserver/package.json
+++ b/multiplayserver/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2"
