--- a/singleplayserver/package.json
+++ b/singleplayserver/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2"
   }
 }
